<resources>
    <string name="app_name">Project_Test</string>
    <string name="man_hinh_2">Màn Hình 2</string>
    <string name="man_hinh_chinh_textview">Đây là màn hình chính</string>
    <string name="man_hinh_1">Màn Hình 1</string>
    <string name="man_hinh_2_textview">Đây là màn hình 2</string>
    <string name="btnBack">Quay lại</string>
    <string name="todo">TODO</string>
    <string name="to">To</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="input">Input</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="ngay_sinh">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="name">Tên</string>
    <string name="exit">Thoát</string>
    <string name="dangnhapvaohethong">Đăng nhập vào hệ thống</string>
    <string name="cscom">CSCOM</string>
    <string name="luuthongtindangnhap">Lưu thông tin đăng nhập</string>
    <string name="tong2so">Tổng hai số</string>
    <string name="nhapsoa">Nhập số a:</string>
    <string name="nhapsob">Nhập số b:</string>
    <string name="nothing">Nothing</string>
    <string name="sum">Tổng</string>
    <string name="clear">Xóa trắng</string>
    <string name="subject_1">Lập trình ứng dụng Android</string>
    <string name="title_1">Chọn thành viên</string>
    <string name="mem_1">Hoàng Phan Minh Đức</string>
    <string name="mem_2">Dương Trực Đông</string>
    <string name="mem_3">Phan Đại</string>
    <string name="mem_4">Lê Đức Minh</string>
    <string name="test_connection">Test Connection</string>
    <string name="toggle_on">Bật</string>
    <string name="toggle_off">Tắt</string>
    <string name="them">Thêm</string>
    <string name="edit">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="xoatrang">Xóa trắng</string>
    <string-array name="string_array_1">
        <item>HP</item>
        <item>Dell</item>
        <item>Lenovo</item>
        <item>Acer</item>
        <item>MSI</item>
    </string-array>
</resources>