<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChecBox_Demo"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_1"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"/>

    <CheckBox
        android:id="@+id/mem_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mem_1"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/mem_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mem_2"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/mem_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mem_3"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/mem_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mem_4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />
</LinearLayout>