<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaiTap2_B2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#262626"
        android:text="@string/dangnhapvaohethong"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#673AB7"
        android:gravity="center"
        android:text="@string/cscom"
        android:textColor="#FFFFFF"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/tai_khoan" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/mat_khau" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luuthongtindangnhap" />
    </LinearLayout>
</LinearLayout>