<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Messenger"
    android:orientation="vertical">

    <EditText
        android:id="@+id/toInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:inputType="text" />

    <EditText
        android:id="@+id/msgInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/message"
        android:layout_weight="1"
        android:gravity="top"
        />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        tools:ignore="RtlHardcoded" />


</LinearLayout>